traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/story/script.rpy", line 65, in script call
    call chapter1 from _call_chapter1
  File "game/story/script.rpy", line 1468, in script call
    call ch1_followjorunn from _call_ch1_followjorunn
  File "game/story/ch2_follow_jorunn_beginning.rpy", line 406, in script call
    call ch2_jorunn_village from _call_ch2_jorunn_village
  File "game/story/ch2_follow_jorunn_village.rpy", line 501, in script
    if kelp == 3 and veggie = 3 and fish == 3:
  File "game/story/ch2_follow_jorunn_village.rpy", line 501
    kelp == 3 and veggie = 3 and fish == 3
                         ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/story/script.rpy", line 65, in script call
    call chapter1 from _call_chapter1
  File "game/story/script.rpy", line 1468, in script call
    call ch1_followjorunn from _call_ch1_followjorunn
  File "game/story/ch2_follow_jorunn_beginning.rpy", line 406, in script call
    call ch2_jorunn_village from _call_ch2_jorunn_village
  File "game/story/ch2_follow_jorunn_village.rpy", line 501, in script
    if kelp == 3 and veggie = 3 and fish == 3:
  File "renpy/ast.py", line 2079, in execute
    if renpy.python.py_eval(condition):
       ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^ 
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/story/ch2_follow_jorunn_village.rpy", line 501
    kelp == 3 and veggie = 3 and fish == 3
                         ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

Windows-11-10.0.26200-SP0 AMD64
Ren'Py 8.5.2.26010301
HeartsDepthDEMO 3.0.1
Sun May  3 15:02:52 2026
